--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[features]
+default = ["std"]
+std = []
+
+# Reduce stack usage for buffered read operations.
+# This feature is useful when integrating on resource constrained devices such as microcontroler
+# where the stack size is fixed (stacks do not grow) and limited to a few (k)bytes.
+reduced-stack-buffer = []
